// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  caption="Hello World"
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {children} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  navigation={true}
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {snap=false} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    horizontal={true}
    onScroll={[Function]}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
  title="Hello World"
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;
